# BuddyAllocator

./: CMakeLists.txt  README.md  main.cpp
BuddyAllocatorLib/: Allocator.cpp  Allocator.h  BlockHead.h  BlockStatus.h  BorderDescriptor.cpp  BorderDescriptor.h  CMakeLists.txt  MemoryBlock.cpp  MemoryBlock.h
BuddyAllocatorLibTests/: AllocatorTests.cpp
BuddyMemoryAllocatorLib/: Allocator.cpp  Allocator.h  BlockHead.h  BlockStatus.h  CMakeLists.txt
BuddyMemoryAllocatorLibTests/: AllocatorTests.cpp  CMakeLists.txt  TestsRunner.h
